# anscombe-numcodecs

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
examples/: workbook.ipynb
src/anscombe_numcodecs/: __init__.py  codec.py  estimate.py
src/poisson_numcodecs/: __init__.py  codec.py  estimate.py
tests/: test_codec.py  test_poisson_codec.py
