[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anscombe_numcodecs"
version = "0.1.2"
authors = [
  { name = "Jerome Lecoq", email = "jeromel@alleninstitute.org" },
  { name = "Dimitri Yatsenko", email = "dimitr@datajoint.com" },
]
maintainers = [
  { name = "Dimitri Yatsenko", email = "dimitr@datajoint.com" },
]
license = { file = "LICENSE" }
description = "Numcodecs implementation for compressing photon-limited movies."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["video compression", "numcodecs", "zarr", "compression algorithms", "multimedia", "multiphoton microscopy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "numpy>=2.0",
    "numcodecs>=0.1",
    "scikit-learn",
]

# Dependencies will be managed via requirements.txt

[project.urls]
Homepage = "https://github.com/datajoint/anscombe-numcodecs"
Source = "https://github.com/datajoint/anscombe-numcodecs"
Issues = "https://github.com/datajoint/anscombe-numcodecs/issues"
